appId: host.exp.Exponent
---
- tapOn: ".*Spicy.*"
- tapOn: ".*Savory.*"
- tapOn: ".*Sweet.*"
- tapOn: ".*Continue.*"
- waitForAnimationToEnd:
    timeout: 3500
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/ob-09-dietary"
