appId: host.exp.Exponent
---
- tapOn:
    text: "Eggs"
    index: 0
- tapOn:
    text: "Vegetarian"
    index: 0
- tapOn: "Mushrooms"
- tapOn: ".*Continue.*"
- waitForAnimationToEnd:
    timeout: 3500
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/ob-11-next"
